# TECHTEST_HEURITECH

./: .gitignore  README.md  pyproject.toml  technical_test.ipynb
data/stored/: unique_labels_by_type.json
src/: __main__.py
src/data/: data_preparation.py  download_dataset.py  evaluate.py  trend_single_pattern.py  trend_single_shoe.py  trend_single_type.py
