[project]
name = "techtest-heuritech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "seaborn>=0.13.2",
    "snowflake>=1.2.0",
    "snowflake-connector-python>=3.14.0",
    "pyarrow>=19.0.1",
    "parquet-tools>=0.2.16",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "mlxtend>=0.23.4",
    "tqdm>=4.67.1",
    "scikit-mine>=1.0.0",
    "fire>=0.7.0",
]
